# vid2sim

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: perception-ci.yml  reconstruction-ci.yml  scene-ci.yml
FrontendVid2Sim/: .gitignore  README.md  SKILL.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
FrontendVid2Sim/scripts/: README.md  oak_uvc.py
FrontendVid2Sim/src/: App.tsx  index.css
config/: physics_lookup.yaml  runpod.yaml
demo/: README.md  backup_demo.README.md  bench_pretty.md  choreography.md  pitch_deck.md  render_pretty.py
docs/: PHASED_PLAN.md  VID2SIM_PRD.md
docs/adr/: ADR-001-scene-spec-source-of-truth.md  ADR-002-hybrid-depth-fusion.md  ADR-003-image-to-3d-diffusion.md  ADR-004-dual-physics-engine.md  ADR-005-vlm-physics-inference.md  ADR-006-browser-native-viewer.md  ADR-007-compute-split.md  ADR-008-scope-exclusions.md  ADR-009-runpod-remote-diffusion.md  README.md
docs/perception/: README.md  camera_check.md
docs/plans/: 01-perception.md  02-reconstruction.md  03-scene-assembly.md  04-presentation.md
docs/reconstruction/: bench_da3.md  bench_runpod.md  bench_sf3d_local.md
docs/scene/: README.md
scripts/: demo_scene_assembly.py  generate_demo_capture.py  generate_perception_stub.py  live_preview.py  prewarm_pod.sh  reconstruct_demo_scene.py  view_capture.py
spec/: perception_frame.md  reconstructed_object.md  scene.example.json  scene.schema.json
web/: index.html  styles.css
(+593 files in other folders)
